<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/layoutMargin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/app_title"
                style="@style/title"
                android:text="@string/info_title"
                app:layout_constraintBottom_toTopOf="@+id/add_sound_container"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_intro"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/nature_img_description"
                android:importantForAccessibility="yes"
                android:scaleType="fitCenter"
                android:focusable="true"
                app:srcCompat="@drawable/nature" />

            <TextView
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:focusable="true"
                android:text="@string/nature_img_cite"
                android:textAlignment="center"
                android:textSize="@dimen/linkSize"
                android:textStyle="italic" />


        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/home"
        style="@style/icon"
        android:contentDescription="@string/home_button"
        android:focusable="true"
        android:src="@drawable/home"/>


</LinearLayout>