<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/player_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/play_sound_icon"
        style="@style/dark_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/player_ll"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play_arrow"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:id="@+id/player_ll"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/player_btn"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/category_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_margin="0dp"
            style="@style/light_button"
            android:text="@string/category_btn_txt" />


        <TextView
            android:id="@+id/date_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/date_txt" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>